docs(v3): add v3 preview docs

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,6 +8,15 @@ edit_uri: ""
 
 nav:
     - Getting Started: index.md
+    - Usage Guide (v3):
+          - v3/about.md
+          - v3/migration.md
+          - v3/create.md
+          - v3/when.md
+          - v3/verify.md
+          - v3/attributes.md
+          - v3/context-managers.md
+          - v3/api.md
     - Usage Guide:
           - usage/create.md
           - usage/when.md
@@ -29,6 +38,7 @@ theme:
     features:
         - navigation.instant
         - navigation.sections
+        - navigation.footer
     font:
         text: "Open Sans"
         code: "Fira Mono"
@@ -58,6 +68,9 @@ plugins:
                       show_object_full_path: True
                       show_source: False
                       heading_level: 2
+                      summary: true
+                      show_symbol_type_heading: true
+                      show_symbol_type_toc: true
 
 watch:
     - decoy
