--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,6 +14,7 @@ nav:
           - v3/create.md
           - v3/when.md
           - v3/verify.md
+          - v3/matchers.md
           - v3/attributes.md
           - v3/context-managers.md
           - v3/api.md
